화면 보여주기 완료
network data -> to Room Database
add an adapter to recyclerview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
 
     // html parser
     implementation "org.jsoup:jsoup:1.10.2"
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
