설정화면 및 웹뷰 추가
option 메뉴에서 시작, 종료, 진행중 확인 메뉴 추가함.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             android:theme="@style/AppTheme.DetailActivity" />
         <activity android:name=".SettingActivity" />
 
+        <activity android:name=".WebActivity" />
+
         <receiver android:name=".app.AlarmBroadcaseReceiver"
             android:enabled="true"
             android:exported="false">
