--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,10 @@ android {
         applicationId "me.yeojoy.hancahouse"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 2
+        versionCode 3
+
+
+        
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -23,6 +26,12 @@ android {
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
+    }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "HancaHouse-${variant.buildType.name}-${variant.versionCode}-${variant.versionName}.apk"
+        }
     }
 }
 
