--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,7 @@ android {
         applicationId "me.yeojoy.hancahouse"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 3
-
-
-        
+        versionCode System.getenv("BUILD_NUMBER") as Integer ?: 4
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -20,6 +17,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            resValue "string", "app_name", "HancaHouse"
+        }
+
+        debug {
+            resValue "string", "app_name", "Hanca " + (System.getenv("BUILD_NUMBER") ?: "IDE")
         }
     }
 
