restore filename to upload .apk file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "me.yeojoy.hancahouse"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode System.getenv("BUILD_NUMBER") as Integer ?: 4
-        versionName "1.0.0"
+        versionCode houseVersionCode
+        versionName houseVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -32,7 +32,8 @@ android {
 
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "HancaHouse-${variant.buildType.name}-${variant.versionCode}-${variant.versionName}.apk"
+//            outputFileName = "HancaHouse-${variant.buildType.name}-${variant.versionCode}-${variant.versionName}.apk"
+            outputFileName = "app-debug.apk"
         }
     }
 }
@@ -60,4 +61,33 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+}
+
+task upload(type: Exec) {
+    println("Upload file.")
+    def API_URL = "https://content.dropboxapi.com/2/files/upload"
+    def fileName = "HancaHouse-debug-${rootProject.houseVersionCode}-${rootProject.houseVersionName}.apk"
+//    def fileName = "app-debug.apk"
+    def destFilePath = "/hanca/${rootProject.houseVersionCode}/${fileName}"
+    def sourceFilePath = "@app/build/outputs/apk/debug/${fileName}"
+
+    println(API_URL)
+    println(fileName)
+    println(destFilePath)
+    println(sourceFilePath)
+
+    def HEADER_AUTHORIZATION = "Authorization: Bearer TnLEoXKIB1cAAAAAAACBsjoBHKmH4x5u0UNpIiGwd0yZ2YnyTSCZSAkUje65YNt-"
+    def HEADER_ARGS = "Dropbox-API-Arg: {\"path\": \"${destFilePath}\", \"mode\": \"add\",\"autorename\": true,\"mute\": false,\"strict_conflict\": false}"
+    def HEADER_CONTENT_TYPE = "Content-Type: application/octet-stream"
+    println(HEADER_AUTHORIZATION)
+    println(HEADER_ARGS)
+    println(HEADER_CONTENT_TYPE)
+
+    executable "/bin/sh"
+
+    args "-c", "curl -X POST ${API_URL} " +
+            "--header \"${HEADER_AUTHORIZATION}\" " +
+            "--header \"${HEADER_ARGS}\" " +
+            "--header \"${HEADER_CONTENT_TYPE}\" " +
+            "--data-binary ${sourceFilePath}"
 }
