--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ task clean(type: Delete) {
 }
 
 ext {
+
+    houseVersionCode = System.getenv("BUILD_NUMBER") as Integer ?: 5
+    houseVersionName = "1.0.0"
+
     roomVersion = '1.1.1'
     archLifecycleVersion = '1.1.1'
 }
