설정화면 수정
시간간격을 보여주는 Dialog를 보여주기 위해 title과 description에도
clickListener를 붙임.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
 
-    android.applicationVariants.all { variant ->
-        variant.outputs.all {
-            outputFileName = "HancaHouse-${variant.buildType.name}-${variant.versionCode}-${variant.versionName}.apk"
-        }
-    }
+//    android.applicationVariants.all { variant ->
+//        variant.outputs.all {
+//            outputFileName = "HancaHouse-${variant.buildType.name}-${variant.versionCode}-${variant.versionName}.apk"
+//        }
+//    }
 }
 
 dependencies {
