--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
+    ext {
+
+        houseVersionCode = System.getenv("BUILD_NUMBER") as Integer ?: 18
+        houseVersionName = "1.0.0"
+
+        roomVersion = "2.1.0"
+        archLifecycleVersion = "1.1.1"
+        kotlinVersion = "1.3.41"
+        ktlintVersion = "0.33.0"
+        ktxVersion = "1.0.2"
+        navigationVersion = "2.0.0"
+        lifecycleVersion = "2.2.0-alpha04"
+        glideVersion = "4.9.0"
+    }
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        
+        classpath "com.android.tools.build:gradle:3.4.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,13 +40,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-
-    houseVersionCode = System.getenv("BUILD_NUMBER") as Integer ?: 18
-    houseVersionName = "1.0.0"
-
-    roomVersion = '1.1.1'
-    archLifecycleVersion = '1.1.1'
 }
