--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,16 @@ buildscript {
 
     ext {
 
-        houseVersionCode = System.getenv("BUILD_NUMBER") as Integer ?: 18
+        houseVersionCode = 19
         houseVersionName = "1.0.0"
 
-        roomVersion = "2.1.0"
+        roomVersion = "2.2.5"
         archLifecycleVersion = "1.1.1"
-        kotlinVersion = "1.3.41"
+        kotlinVersion = "1.4.10"
         ktlintVersion = "0.33.0"
         ktxVersion = "1.0.2"
         navigationVersion = "2.0.0"
-        lifecycleVersion = "2.2.0-alpha04"
+        lifecycleVersion = "2.2.0"
         glideVersion = "4.9.0"
     }
 
@@ -22,7 +22,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.4.2"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
