change 3 files to kotlin
1. AlarmBroadcastReceiver
2. HouseAdapter
3. HouseDetail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         <activity android:name=".WebActivity" />
 
-        <receiver android:name=".app.AlarmBroadcaseReceiver"
+        <receiver android:name=".app.AlarmBroadcastReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
