--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,16 @@ buildscript {
         houseVersionCode = 19
         houseVersionName = "1.0.0"
 
-        roomVersion = "2.2.5"
+        roomVersion = "2.2.6"
         archLifecycleVersion = "1.1.1"
         kotlinVersion = "1.4.10"
         ktlintVersion = "0.33.0"
         ktxVersion = "1.0.2"
         navigationVersion = "2.0.0"
-        lifecycleVersion = "2.2.0"
-        glideVersion = "4.9.0"
+        lifecycleVersion = "2.3.0"
+        glideVersion = "4.11.0"
+        gson = "2.8.6"
+        coroutine = "1.3.8"
     }
 
     repositories {
