add tablayout and viewpager2
to show 3 fragments.
fix an error to go webactivity.
rename some resources.
add colors for texts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
         </activity>
 
         <activity
-            android:name=".detail.DetailItemActivity"
+            android:name=".detail.HouseDetailActivity"
+            android:theme="@style/AppTheme.DetailActivity" />
+        <activity
+            android:name=".detail.ItemDetailActivity"
             android:theme="@style/AppTheme.DetailActivity" />
         <activity android:name=".SettingActivity" />
 
